feature: fix exceptions